--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>History of Jesus</title>
+    <title>Story of Jesus</title>
 </head>
 <body>
     <div class="caixa-principal">
-        <h1>History of Jesus</h1>
+        <h1>Story of Jesus</h1>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
             <p class="texto-resultado"></p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="scrip.js"></script>
 </body>
 </html>
