--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
             <p class="texto-resultado"></p>
+            <button class="novamente-btn">JOGAR NOVAMENTE</button>
         </div>
     </div>
-    <script src="scrip.js"></script>
+    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/perguntas.js"></script>
+    <script type="module" src="js/aleatorio.js"></script>
 </body>
 </html>
