--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Story of Jesus</title>
+    <title>History of Jesus</title>
 </head>
+
 <body>
     <div class="caixa-principal">
-        <h1>Story of Jesus</h1>
+        <h1>History of Jesus</h1>
+        <div class="tela-inicial">
+            <p> Desafie-se e teste seus conhecimentos sobre a vida de Jesus!</p>
+            <button class="iniciar-btn">INICIAR</button>
+        </div>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
@@ -16,8 +22,9 @@
             <button class="novamente-btn">JOGAR NOVAMENTE</button>
         </div>
     </div>
-    <script type="module" src="js/script.js"></script>
-    <script type="module" src="js/perguntas.js"></script>
     <script type="module" src="js/aleatorio.js"></script>
+    <script type="module" src="js/perguntas.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
+
 </html>
